<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/line_indicator_1"
        style="@style/TabChordIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tab_indicator_high_e"
        app:layout_constraintBottom_toBottomOf="@id/line_1"
        app:layout_constraintEnd_toStartOf="@id/line_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/line_1" />

    <TextView
        android:id="@+id/line_indicator_2"
        style="@style/TabChordIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tab_indicator_b"
        app:layout_constraintBottom_toBottomOf="@id/line_2"
        app:layout_constraintEnd_toStartOf="@id/line_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/line_2" />

    <TextView
        android:id="@+id/line_indicator_3"
        style="@style/TabChordIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tab_indicator_g"
        app:layout_constraintBottom_toBottomOf="@id/line_3"
        app:layout_constraintEnd_toStartOf="@id/line_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/line_3" />

    <TextView
        android:id="@+id/line_indicator_4"
        style="@style/TabChordIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tab_indicator_d"
        app:layout_constraintBottom_toBottomOf="@id/line_4"
        app:layout_constraintEnd_toStartOf="@id/line_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/line_4" />

    <TextView
        android:id="@+id/line_indicator_5"
        style="@style/TabChordIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tab_indicator_a"
        app:layout_constraintBottom_toBottomOf="@id/line_5"
        app:layout_constraintEnd_toStartOf="@id/line_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/line_5" />

    <TextView
        android:id="@+id/line_indicator_6"
        style="@style/TabChordIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tab_indicator_low_e"
        app:layout_constraintBottom_toBottomOf="@id/line_6"
        app:layout_constraintEnd_toStartOf="@id/line_6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/line_6" />

    <com.dosei.chordsdictionary.LineView
        android:id="@+id/line_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/line_spacing"
        android:layout_marginTop="@dimen/line_spacing"
        android:layout_marginEnd="@dimen/line_spacing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.dosei.chordsdictionary.LineView
        android:id="@+id/line_2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/line_spacing"
        android:layout_marginTop="@dimen/line_spacing"
        android:layout_marginEnd="@dimen/line_spacing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line_1" />

    <com.dosei.chordsdictionary.LineView
        android:id="@+id/line_3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/line_spacing"
        android:layout_marginTop="@dimen/line_spacing"
        android:layout_marginEnd="@dimen/line_spacing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line_2" />

    <com.dosei.chordsdictionary.LineView
        android:id="@+id/line_4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/line_spacing"
        android:layout_marginTop="@dimen/line_spacing"
        android:layout_marginEnd="@dimen/line_spacing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line_3" />

    <com.dosei.chordsdictionary.LineView
        android:id="@+id/line_5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/line_spacing"
        android:layout_marginTop="@dimen/line_spacing"
        android:layout_marginEnd="@dimen/line_spacing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line_4" />

    <com.dosei.chordsdictionary.LineView
        android:id="@+id/line_6"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/line_spacing"
        android:layout_marginTop="@dimen/line_spacing"
        android:layout_marginBottom="@dimen/line_spacing"
        android:layout_marginEnd="@dimen/line_spacing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line_5" />

    <com.dosei.chordsdictionary.LineView
        android:id="@+id/bar_1"
        android:layout_width="1dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/line_6"
        app:layout_constraintStart_toStartOf="@id/line_1"
        app:layout_constraintTop_toTopOf="@id/line_1"
        app:orientation="vertical" />

    <com.dosei.chordsdictionary.LineView
        android:id="@+id/bar_2"
        android:layout_width="1dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/line_6"
        app:layout_constraintEnd_toEndOf="@id/line_1"
        app:layout_constraintTop_toTopOf="@id/line_1"
        app:orientation="vertical" />

    <TextView
        android:id="@+id/note_line_1"
        style="@style/TabNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/line_1"
        app:layout_constraintEnd_toEndOf="@id/line_1"
        app:layout_constraintStart_toStartOf="@id/line_1"
        app:layout_constraintTop_toTopOf="@id/line_1"
        tools:text="0" />

    <TextView
        android:id="@+id/note_line_2"
        style="@style/TabNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/line_2"
        app:layout_constraintEnd_toEndOf="@id/line_2"
        app:layout_constraintStart_toStartOf="@id/line_2"
        app:layout_constraintTop_toTopOf="@id/line_2"
        tools:text="5" />

    <TextView
        android:id="@+id/note_line_3"
        style="@style/TabNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/line_3"
        app:layout_constraintEnd_toEndOf="@id/line_3"
        app:layout_constraintStart_toStartOf="@id/line_3"
        app:layout_constraintTop_toTopOf="@id/line_3"
        tools:text="9" />

    <TextView
        android:id="@+id/note_line_4"
        style="@style/TabNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/line_4"
        app:layout_constraintEnd_toEndOf="@id/line_4"
        app:layout_constraintStart_toStartOf="@id/line_4"
        app:layout_constraintTop_toTopOf="@id/line_4"
        tools:text="14" />

    <TextView
        android:id="@+id/note_line_5"
        style="@style/TabNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/line_5"
        app:layout_constraintEnd_toEndOf="@id/line_5"
        app:layout_constraintStart_toStartOf="@id/line_5"
        app:layout_constraintTop_toTopOf="@id/line_5"
        tools:text="19" />

    <TextView
        android:id="@+id/note_line_6"
        style="@style/TabNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/line_6"
        app:layout_constraintEnd_toEndOf="@id/line_6"
        app:layout_constraintStart_toStartOf="@id/line_6"
        app:layout_constraintTop_toTopOf="@id/line_6"
        tools:text="X" />

</androidx.constraintlayout.widget.ConstraintLayout>